--- a/phone_migration/web_templates/profiles.html
+++ b/phone_migration/web_templates/profiles.html
@@ -2,7 +2,7 @@
 {% block title %}Profiles - Phone Migration Tool{% endblock %}
 {% block content %}
 <div class="card">
-    <h2>📱 Profiles</h2>
-    <p>Profile management page - Coming soon!</p>
+    <h2><i class="fas fa-user-circle"></i> Profiles</h2>
+    <p style="color: #94a3b8;">Profile management page - Coming soon!</p>
 </div>
 {% endblock %}
