--- a/phone_migration/web_templates/history.html
+++ b/phone_migration/web_templates/history.html
@@ -2,7 +2,7 @@
 {% block title %}History - Phone Migration Tool{% endblock %}
 {% block content %}
 <div class="card">
-    <h2>📊 History</h2>
-    <p>History/logs page - Coming soon!</p>
+    <h2><i class="fas fa-history"></i> History</h2>
+    <p style="color: #94a3b8;">History/logs page - Coming soon!</p>
 </div>
 {% endblock %}
