--- a/phone_migration/web_templates/rules.html
+++ b/phone_migration/web_templates/rules.html
@@ -2,7 +2,7 @@
 {% block title %}Rules - Phone Migration Tool{% endblock %}
 {% block content %}
 <div class="card">
-    <h2>📝 Rules</h2>
-    <p>Rules management page - Coming soon!</p>
+    <h2><i class="fas fa-cog"></i> Rules</h2>
+    <p style="color: #94a3b8;">Rules management page - Coming soon!</p>
 </div>
 {% endblock %}
