--- a/phone_migration/web_templates/run.html
+++ b/phone_migration/web_templates/run.html
@@ -2,7 +2,7 @@
 {% block title %}Run - Phone Migration Tool{% endblock %}
 {% block content %}
 <div class="card">
-    <h2>▶️ Run Operations</h2>
-    <p>Run operations page - Coming soon!</p>
+    <h2><i class="fas fa-play-circle"></i> Run Operations</h2>
+    <p style="color: #94a3b8;">Run operations page - Coming soon!</p>
 </div>
 {% endblock %}
