--- a/phone_migration/web_templates/base.html
+++ b/phone_migration/web_templates/base.html
@@ -250,19 +250,21 @@
         }
         
         .form-group input,
-        .form-group select {
+        .form-group select,
+        .form-control {
             width: 100%;
             padding: 11px 14px;
             background: #141821;
             border: 1px solid var(--border-subtle);
             border-radius: var(--radius-pill);
-            font-size: 16px;
+            font-size: 14px;
             color: var(--text);
             transition: all 170ms var(--easing);
         }
         
         .form-group input:focus,
-        .form-group select:focus {
+        .form-group select:focus,
+        .form-control:focus {
             outline: none;
             border-color: var(--accent);
             background: #1A1E25;
