fix: add missing script tags to page templates
The extraction process removed the inline script blocks but didn't add
the external script tag references in the extra_scripts block. This caused
onclick handlers to reference undefined functions.

Fixed by adding proper <script src='...js'> tags to:
- dashboard.html
- profiles.html
- rules.html
- history.html
- run.html

Functions in static/js/*.js files are now properly loaded before
the inline onclick handlers try to reference them.

--- a/phone_migration/web_templates/dashboard.html
+++ b/phone_migration/web_templates/dashboard.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
     {% block extra_styles %}{% endblock %}
 
+<script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
+
 {% block content %}
 <div class="card">
     <h2><i class="fas fa-mobile-alt"></i> Device Status</h2>
@@ -105,4 +107,4 @@
 <div id="alert-container"></div>
 {% endblock %}
 
-    {% block extra_scripts %}{% endblock %}
+{% block extra_scripts %}{% endblock %}
