--- a/phone_migration/web_templates/profiles.html
+++ b/phone_migration/web_templates/profiles.html
@@ -2,7 +2,9 @@
 {% block title %}Profiles - Phone Migration Tool{% endblock %}
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/profiles.css') }}">
-    {% block extra_styles %}{% endblock %}
+    {% block extra_styles %}
+
+<script src="{{ url_for(\'static\', filename=\'js/profiles.js\') }}"></script>{% endblock %}
 
 {% block content %}
 <div class="card">
