--- a/phone_migration/web_templates/history.html
+++ b/phone_migration/web_templates/history.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {% block title %}History - Phone Migration Tool{% endblock %}
 
+{% block extra_styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/history.css') }}">
-    {% block extra_styles %}
+{% endblock %}
 
-<script src="{{ url_for(\'static\', filename=\'js/history.js\') }}"></script>{% endblock %}
+{% block extra_scripts %}
+<script src="{{ url_for('static', filename='js/history.js') }}"></script>
+{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -44,5 +47,3 @@
     </div>
 </div>
 {% endblock %}
-
-    {% block extra_scripts %}{% endblock %}
