--- a/phone_migration/web_templates/rules.html
+++ b/phone_migration/web_templates/rules.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Rules - Phone Migration Tool{% endblock %}
 
+{% block extra_styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/rules.css') }}">
-    {% block extra_styles %}
+{% endblock %}
 
-<script src="{{ url_for(\'static\', filename=\'js/rules.js\') }}"></script>{% endblock %}
+{% block extra_scripts %}
+<script src="{{ url_for('static', filename='js/rules.js') }}"></script>
+{% endblock %}
 
 {% block content %}
 <div class="card">
@@ -120,5 +123,3 @@
 
 <div id="alert-container" style="position: fixed; top: 80px; right: 24px; z-index: 2000; max-width: 400px;"></div>
 {% endblock %}
-
-    {% block extra_scripts %}{% endblock %}
