--- a/phone_migration/web_templates/dashboard.html
+++ b/phone_migration/web_templates/dashboard.html
@@ -68,6 +68,12 @@
             <i class="fas fa-hand-paper"></i> Run Manual Rules
         </button>
     </div>
+    
+    <!-- Command Preview Card -->
+    <div id="command-preview-card" style="display: none; margin-top: 16px; padding: 16px; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); border-radius: var(--radius-card);">
+        <div style="font-size: 12px; color: var(--text-muted); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 0.5px;"><i class="fas fa-terminal"></i> Command Preview</div>
+        <div id="command-preview-content"></div>
+    </div>
 </div>
 
 <!-- Manual Rules Selection Panel -->
