refactor: Rename Smart Copy to Backup with improved documentation
Major changes:
- Renamed 'smart_copy' mode to 'backup' throughout codebase
- Updated CLI: --smart-copy → --backup (legacy support maintained)
- Updated config: mode: 'smart_copy' → mode: 'backup'
- Changed default conflict handling for backup: rename_duplicates=False (skip duplicates)
- Backup mode now skips conflicts by default instead of renaming

Key differences:
- Move/Copy: rename_duplicates=True (default: rename duplicates)
- Backup: rename_duplicates=False (default: skip duplicates - safer)
- Sync: always deletes extraneous files (mirror behavior)

Documentation:
- Created comprehensive RULE_MODES.md explaining all four modes
- Updated config.py with mode icons and descriptions
- Updated main.py, web_ui.py, and rules.html
- Updated runner.py to use backup mode with correct defaults

Backward compatibility:
- Old 'smart_copy' mode strings still recognized in existing configs
- add_smart_copy_rule() kept as deprecated alias
- run_smart_copy_rule() kept as deprecated alias
- Web UI accepts both 'backup' and 'smart_copy' modes

Benefits:
- Better naming: 'Backup' clearly indicates it's a backup tool, not a copy
- Safer defaults: Skips duplicates instead of creating (N) versions
- Resumable backups: Can pick up where it left off
- Clear documentation: Users understand what each mode does

--- a/phone_migration/web_templates/rules.html
+++ b/phone_migration/web_templates/rules.html
@@ -41,7 +41,8 @@
                     <option value="">Select mode...</option>
                     <option value="move">Move (phone → desktop, delete from phone)</option>
                     <option value="copy">Copy (phone → desktop, keep on phone)</option>
-                    <option value="smart_copy">Smart Copy (resumable, tracks progress)</option>
+                    <option value="backup">Backup (resumable copy, no deletions)</option>
+                    <option value="smart_copy" style="display:none;">Smart Copy (legacy)</option>
                     <option value="sync">Sync (desktop → phone, mirror)</option>
                 </select>
             </div>
