feat: Add comprehensive documentation page to web UI
Added new documentation page with beautifully formatted rule modes guide:

Features:
- Interactive mode cards with hover effects
- Comparison table showing all modes at a glance
- Decision tree to help users choose the right mode
- Conflict resolution examples for each mode
- Backup mode special features section
- Manual vs automatic rules explanation
- Fully responsive design (mobile & desktop)
- Uses app's existing color scheme and styling

Content covers:
- Move mode: Archive and free up storage
- Copy mode: Regular backups with safety
- Backup mode: Resumable backups for large transfers
- Sync mode: Mirror desktop to phone

The page is accessible from navigation menu at /documentation and helps
users understand what each rule mode does and when to use it.

--- a/phone_migration/web_templates/base.html
+++ b/phone_migration/web_templates/base.html
@@ -17,6 +17,7 @@
                 <a href="/profiles" {% if request.path == '/profiles' %}class="active"{% endif %}><i class="fas fa-user-circle"></i> Profiles</a>
                 <a href="/rules" {% if request.path == '/rules' %}class="active"{% endif %}><i class="fas fa-cog"></i> Rules</a>
                 <a href="/history" {% if request.path == '/history' %}class="active"{% endif %}><i class="fas fa-history"></i> History</a>
+                <a href="/documentation" {% if request.path == '/documentation' %}class="active"{% endif %}><i class="fas fa-book"></i> Documentation</a>
             </nav>
         </div>
     </header>
