Add MTP cleanup scripts, USB reset mechanism, and diagnostic tools
- Add cleanup_mtp.sh: Standard GVFS restart procedure
- Add cleanup_mtp_nuclear.sh: Aggressive cleanup with USB device reset
- Add reset_usb_device.sh: Sudo helper for USB unbind/bind operations
- Add DIAGNOSTIC_REPORT.md: Documentation of MTP copy failure investigation
- Add test suites for diagnosing MTP issues
- Update web UI with device status detection and MTP limitation warning
- Improve profiles management with device detection

These tools address the exclusive MTP access limitation on Linux by providing
automatic cleanup when file managers lock the device.

--- a/phone_migration/web_templates/profiles.html
+++ b/phone_migration/web_templates/profiles.html
@@ -13,6 +13,9 @@
 <div class="card">
     <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px;">
         <h2><i class="fas fa-mobile-alt"></i> Device Profiles</h2>
+        <button class="btn btn-success" onclick="openAddModal()" style="gap: 8px;">
+            <i class="fas fa-plus"></i> Add Profile
+        </button>
     </div>
     
     <div id="profiles-container" class="profile-grid">
