--- a/phone_migration/web_templates/dashboard.html
+++ b/phone_migration/web_templates/dashboard.html
@@ -25,6 +25,17 @@
         <span id="run-status-text" style="color: var(--text-muted);">Ready to run</span>
     </div>
     
+    <!-- Rules Preview Section (Collapsible) -->
+    <div id="rules-preview-card" style="margin-top: 16px; margin-bottom: 16px; padding: 12px; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); border-radius: var(--radius-card); cursor: pointer;" onclick="toggleRulesPreview()">
+        <div style="display: flex; align-items: center; justify-content: space-between;">
+            <div style="font-size: 13px; color: var(--text-muted); font-weight: 500;">
+                <i class="fas fa-list" id="preview-icon"></i> <span id="rules-preview-title">View rules to execute</span>
+            </div>
+            <i class="fas fa-chevron-down" id="preview-chevron" style="color: var(--text-muted); font-size: 12px; transition: transform 0.2s;"></i>
+        </div>
+        <div id="rules-preview-content" style="display: none; max-height: 300px; overflow-y: auto; margin-top: 12px; padding-top: 12px; border-top: 1px solid rgba(255,255,255,0.1);"></div>
+    </div>
+    
     <div class="run-options">
         <div class="option-card selected" onclick="toggleOption('dry_run')" id="dry-run-option">
             <div style="display: flex; align-items: center; gap: 12px;">
