--- a/phone_migration/web_templates/dashboard.html
+++ b/phone_migration/web_templates/dashboard.html
@@ -25,18 +25,7 @@
         <span id="run-status-text" style="color: var(--text-muted);">Ready to run</span>
     </div>
     
-    <!-- Rules Preview Section (Collapsible) -->
-    <div id="rules-preview-card" style="margin-top: 16px; margin-bottom: 16px; padding: 12px; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); border-radius: var(--radius-card); cursor: pointer;" onclick="toggleRulesPreview()">
-        <div style="display: flex; align-items: center; justify-content: space-between;">
-            <div style="font-size: 13px; color: var(--text-muted); font-weight: 500;">
-                <i class="fas fa-list" id="preview-icon"></i> <span id="rules-preview-title">View rules to execute</span>
-            </div>
-            <i class="fas fa-chevron-down" id="preview-chevron" style="color: var(--text-muted); font-size: 12px; transition: transform 0.2s;"></i>
-        </div>
-        <div id="rules-preview-content" style="display: none; max-height: 300px; overflow-y: auto; margin-top: 12px; padding-top: 12px; border-top: 1px solid rgba(255,255,255,0.1);"></div>
-    </div>
-    
-    <div class="run-options">
+    <div class="run-options" style="margin-top: 16px;">
         <div class="option-card selected" onclick="toggleOption('dry_run')" id="dry-run-option">
             <div style="display: flex; align-items: center; gap: 12px;">
                 <i class="fas fa-eye" style="color: var(--warning); font-size: 20px;"></i>
@@ -85,6 +74,15 @@
         <div style="font-size: 12px; color: var(--text-muted); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 0.5px;"><i class="fas fa-terminal"></i> Command Preview</div>
         <div id="command-preview-content"></div>
     </div>
+</div>
+
+<!-- Rules Preview Section (Collapsible) - Full Width Below -->
+<div class="card" id="rules-preview-card" style="cursor: pointer;" onclick="toggleRulesPreview()">
+    <div style="display: flex; align-items: center; justify-content: space-between;">
+        <h2 style="margin: 0;"><i class="fas fa-list" id="preview-icon"></i> <span id="rules-preview-title">Rules to Execute</span></h2>
+        <i class="fas fa-chevron-down" id="preview-chevron" style="color: var(--text-muted); font-size: 16px; transition: transform 0.2s;"></i>
+    </div>
+    <div id="rules-preview-content" style="display: none; margin-top: 20px;"></div>
 </div>
 
 <!-- Manual Rules Selection Panel -->
