--- a/phone_migration/web_templates/rules.html
+++ b/phone_migration/web_templates/rules.html
@@ -2,11 +2,11 @@
 {% block title %}Rules - Phone Migration Tool{% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/rules.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/rules.css') }}?v={{ range(1, 10000) | random }}">
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='js/rules.js') }}"></script>
+<script src="{{ url_for('static', filename='js/rules.js') }}?v={{ range(1, 10000) | random }}"></script>
 {% endblock %}
 
 {% block content %}
