Add rename-duplicates flag, session persistence, and disable navigation during runs
New features:
- Command preview now shows --rename-duplicates flag when enabled
- Session persistence: page refresh/tab switch preserves operation state
- Operations continue running after refresh with UI restored
- Navigation links disabled during operations (prevent accidental navigation)
- Visual feedback: nav links fade to 50% opacity when disabled

Session storage tracks:
- isRunning state
- operationType (auto vs manual)
- selectedRuleIds for manual runs

This prevents losing operation progress when accidentally refreshing
or switching tabs during a long-running sync operation.

--- a/phone_migration/web_templates/base.html
+++ b/phone_migration/web_templates/base.html
@@ -19,12 +19,12 @@
                 <img src="{{ url_for('static', filename='img/logo.png') }}" alt="SyncDroid Logo" style="height: 48px; width: 48px; vertical-align: middle; margin-right: 12px;">
                 <span style="background: linear-gradient(135deg, #0ea5e9, #8b5cf6); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-weight: 700;">SyncDroid</span>
             </h1>
-            <nav>
-                <a href="/" {% if request.path == '/' %}class="active"{% endif %}><i class="fas fa-th-large"></i> Dashboard</a>
-                <a href="/profiles" {% if request.path == '/profiles' %}class="active"{% endif %}><i class="fas fa-user-circle"></i> Profiles</a>
-                <a href="/rules" {% if request.path == '/rules' %}class="active"{% endif %}><i class="fas fa-cog"></i> Rules</a>
-                <a href="/history" {% if request.path == '/history' %}class="active"{% endif %}><i class="fas fa-history"></i> History</a>
-                <a href="/documentation" {% if request.path == '/documentation' %}class="active"{% endif %}><i class="fas fa-book"></i> Documentation</a>
+            <nav id="main-nav">
+                <a href="/" {% if request.path == '/' %}class="active"{% endif %} class="nav-link"><i class="fas fa-th-large"></i> Dashboard</a>
+                <a href="/profiles" {% if request.path == '/profiles' %}class="active"{% endif %} class="nav-link"><i class="fas fa-user-circle"></i> Profiles</a>
+                <a href="/rules" {% if request.path == '/rules' %}class="active"{% endif %} class="nav-link"><i class="fas fa-cog"></i> Rules</a>
+                <a href="/history" {% if request.path == '/history' %}class="active"{% endif %} class="nav-link"><i class="fas fa-history"></i> History</a>
+                <a href="/documentation" {% if request.path == '/documentation' %}class="active"{% endif %} class="nav-link"><i class="fas fa-book"></i> Documentation</a>
             </nav>
         </div>
     </header>
