--- a/phone_migration/web_templates/dashboard.html
+++ b/phone_migration/web_templates/dashboard.html
@@ -112,6 +112,18 @@
     </button>
 </div>
 
+<!-- Operation Progress Card (above statistics) -->
+<div id="operation-progress-card" class="card" style="display: none; border: 2px solid #0ea5e9; background: linear-gradient(135deg, rgba(14, 165, 233, 0.1) 0%, rgba(139, 92, 246, 0.1) 100%);">
+    <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 20px;">
+        <div class="spinner-large"></div>
+        <div>
+            <h2 style="margin: 0 0 8px 0; color: #0ea5e9;"><i class="fas fa-sync fa-spin"></i> <span id="operation-phase-text">Operation In Progress</span></h2>
+            <div id="operation-status-text" style="color: var(--text-muted); font-size: 14px;">Initializing...</div>
+        </div>
+    </div>
+    <div id="rules-progress-list"></div>
+</div>
+
 <div class="card" id="stats-card" style="display: none;">
     <h2><i class="fas fa-chart-bar"></i> Statistics</h2>
     <div class="stats-grid">
@@ -146,18 +158,6 @@
 <div class="card" id="output-card" style="display: none;">
     <h2><i class="fas fa-list-alt"></i> Operations</h2>
     <div id="operations-container"></div>
-</div>
-
-<!-- Operation Progress Card (at bottom) -->
-<div id="operation-progress-card" class="card" style="display: none; border: 2px solid #0ea5e9; background: linear-gradient(135deg, rgba(14, 165, 233, 0.1) 0%, rgba(139, 92, 246, 0.1) 100%);">
-    <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 20px;">
-        <div class="spinner-large"></div>
-        <div>
-            <h2 style="margin: 0 0 8px 0; color: #0ea5e9;"><i class="fas fa-sync fa-spin"></i> <span id="operation-phase-text">Operation In Progress</span></h2>
-            <div id="operation-status-text" style="color: var(--text-muted); font-size: 14px;">Initializing...</div>
-        </div>
-    </div>
-    <div id="rules-progress-list"></div>
 </div>
 
 <div id="alert-container"></div>
